# applied-programming

./: .gitignore  ANNOUNCEMENT-SERVICE.yaml  README.md  lab.db  myproject.py  pyproject.toml  requirements.txt  wsgi.py
announcements/: __init__.py  models.py  routes.py  schemas.py
ap_lab4/: app.py  clean.db  lab.db  manager.py  models.py  myproject.py  pyproject.toml  wsgi.py
ap_lab4/announcements/: __init__.py  models.py  routes.py  schemas.py
ap_lab4/migrations/versions/: b9e564ce4f2c_.py
ap_lab4/templates/: hello.html
migrations/versions/: 0f1cd30d32a5_.py  350f781f9577_test.py  363151a4fdc3_users_table.py  46297bc0034b_.py  4d2534c26c15_.py  4eae903e781a_.py  54a320d71214_.py  584ef2c76785_.py  63bae0013bdf_.py  6491f4a03a2d_.py  75a7871ef2a9_posts_table.py  78f1a270bcd8_initial_migration.py  850b73d034f3_.py  94ef42679b4e_initial_commit.py  bd7aafc7e6d6_.py  c3a94fe294fe_announcementtype.py  dc69c9745cf7_.py  ea1edef5b512_initial_commit.py  f10ed3d7f4a5_.py
templates/: hello.html
tests/: test_ap_lab4.py
