[tool.poetry]
name = "ap_lab4"
version = "0.1.0"
description = ""
authors = ["ryba147 <54861049+ryba147@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
SQLAlchemy = "^1.3.20"
Flask-Migrate = "^2.5.3"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
